; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_resource_tracker.c_mac_free_res.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_resource_tracker.c_mac_free_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, i32, i32, i32, i32, i32*)* @mac_free_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mac_free_res(%struct.mlx4_dev* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca %struct.mlx4_dev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  store i32 0, i32* %14, align 4
  %15 = load i32, i32* %9, align 4
  switch i32 %15, label %28 [
    i32 128, label %16
  ]

16:                                               ; preds = %6
  %17 = load i32*, i32** %12, align 8
  %18 = call i32 @get_param_l(i32* %17)
  store i32 %18, i32* %13, align 4
  %19 = load %struct.mlx4_dev*, %struct.mlx4_dev** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %11, align 4
  %22 = load i32, i32* %13, align 4
  %23 = call i32 @mac_del_from_slave(%struct.mlx4_dev* %19, i32 %20, i32 %21, i32 %22)
  %24 = load %struct.mlx4_dev*, %struct.mlx4_dev** %7, align 8
  %25 = load i32, i32* %13, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @__mlx4_unregister_mac(%struct.mlx4_dev* %24, i32 %25, i32 %26)
  br label %31

28:                                               ; preds = %6
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %14, align 4
  br label %31

31:                                               ; preds = %28, %16
  %32 = load i32, i32* %14, align 4
  ret i32 %32
}

declare dso_local i32 @get_param_l(i32*) #1

declare dso_local i32 @mac_del_from_slave(%struct.mlx4_dev*, i32, i32, i32) #1

declare dso_local i32 @__mlx4_unregister_mac(%struct.mlx4_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
